--- a/assets/css/common/post-entry.css
+++ b/assets/css/common/post-entry.css
@@ -99,7 +99,8 @@
     border-radius: var(--radius);
     pointer-events: none;
     width: 100%;
-    height: auto;
+    height: 300px;
+    object-fit: cover;
 }
 
 .entry-cover a {
